# customer-lifetime-value

./: .dockerignore  .env.example  .env.production.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  docker-compose.yml  dvc.yaml  nginx.conf  params.yaml  pyproject.toml  requirements.txt  run_server.py  setup.bat  setup.py  setup.sh
.dvc/: config
.github/workflows/: ci.yml  deploy.yml
backend/: __init__.py  api.py  api_enhanced.py  cache.py  clv_predictor.py  config.py  data_processor.py  dependencies.py  exceptions.py  feature_engineering.py  feature_engineering_advanced.py  logging_config.py  meta_ads_integration.py  middleware.py  ml_models.py  ml_models_enhanced.py  ml_models_production.py  mlflow_config.py  schemas.py
data/: customers.csv  generate_data.py
deploy/: EC2_DEPLOYMENT_GUIDE.md  deploy.sh  docker-compose.prod.yml  ec2-setup.sh  nginx.prod.conf
frontend/: index.html
frontend/css/: styles.css
frontend/js/: app.js
scripts/: evaluate_models.py  train_models.py
tests/: test_clv.py
